feat: search endpoint
