# src/profiles/dto/index.ts
@@ -1,1 +1,3 @@
 export * from '@otus-social/profiles/dto/profile-response.dto';
+export * from '@otus-social/profiles/dto/search-profiles.dto';
+export * from '@otus-social/profiles/dto/profile-search-response.dto';
